# pulse

./: CHANGELOG.md  CHECKPOINT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  index.html  install.sh  package-lock.json  package.json  release.sh
.github/workflows/: release.yml
docs/: BUILDING.md  CODE_REVIEW_FIXES.md  CONFIGURATION.md  INSTALL.md  KEYBINDINGS.md  SECURITY.md  THEMES.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: handler.rs  lib.rs  pty.rs
src-tauri/src/render/: mod.rs  renderer.rs  surface.rs
src-tauri/src/terminal/: mod.rs
src/components/: CommandPalette.tsx  ErrorBoundary.tsx  HandlerPanel.tsx  PayloadPalette.tsx  ReconSidebar.tsx  SearchBar.tsx  Settings.tsx  SplitPane.tsx  TabBar.tsx  Terminal.tsx  TitleBar.tsx
src/store/: handler.ts  recon.ts  terminal.ts  theme.ts
src/styles/: glass.css
src/themes/: catppuccin-latte.ts  catppuccin-mocha.ts  index.ts
src/types/: terminal.ts  theme.ts
