[package]
name = "pulse"
version = "0.1.0"
description = "A blazing fast terminal emulator with glass aesthetics"
authors = ["0xClumzzy"]
license = "MIT"
repository = "https://github.com/0xClumzzy/pulse"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
toml = "0.8"
